--- a/cpp_notebook/primer/ch-12.md
+++ b/cpp_notebook/primer/ch-12.md
@@ -27,7 +27,7 @@ three are defined in the *memory* header.
         - *make_shared* uses its arguments to construct an object of the given type. 
             - i.e. a call to *make_shared< std::string >* must pass argument(s) that match one of the std::string constructors.
             - [value initialized](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) if no arguments.
-        - **use *make_shared* instead of playing around with raw pointer arguments for shared_ptrs!**
+        - **use *make_shared* and shared_ptr's copy constructor instead of mucking around with raw pointers for shared_ptrs!**
     - each shared_ptr keeps track of how many other shared_ptrs point to the same object (reference count concept).
         - reference count incremented when we copy/assign/pass by value/return by value and decremented when the shared_ptr itself is destroyed (i.e. by going out of scope) or assigned to something else.
         - once a shared_ptr count goes to zero, the object that it manages is automatically destroyed! (by the object's destructor)
@@ -39,22 +39,34 @@ shared_ptr<Foo> factory(T arg) {
     return make_shared<Foo>(arg);
 }
 
-void use_factory(T arg) {
+void use_factory_1(T arg) {
     shared_ptr<Foo> p = factory(arg); // ref count is now 1
     // use p
 } 
 // p goes out of scope, ref count decremented, ref count is now 0
 // the memory to which p points is automatically freed
-~~~
-~~~
-// alternate
-shared_ptr<Foo> use_factory(T arg) {
+
+shared_ptr<Foo> use_factory_2(T arg) {
     shared_ptr<Foo> p = factory(arg); // ref count is now 1
     // use p
     return p; // reference count is incremented when we return p by value
 } 
 // p goes out of scope, ref count decremented, but ref count isn't 0
 // the memory to which p points is not freed
+~~~
+~~~
+// ptr is created and initialized when process is called
+void process(shared_ptr<int> ptr) {
+    // ref count is now 2
+    // use ptr
+} 
+// ptr goes out of scope, ref count decremented
+
+void do_something() {
+    shared_ptr<int> p = make_shared<int>(42); // reference count is 1
+    process(p); // copying p during pass-by-value increments its count
+    int i = *p; // ok: reference count is 1
+}
 ~~~
 - ***unique_ptr< T >***
     - define a *unique_ptr* by passing in a raw pointer to a dynamically allocated object (returned by *new*).
@@ -75,7 +87,7 @@ unique_ptr<int> clone(int p) {
     return ret;
 }
 ~~~
-- **common smart pointer rules**:
+- **general smart pointer rules**:
     - don’t use the same raw pointer value to initialize (or reset) more than one smart pointer.
     - don’t delete the raw pointer returned from get().
     - don’t use get() to initialize or reset another smart pointer.
@@ -86,8 +98,8 @@ unique_ptr<int> clone(int p) {
     - see Primer for details.
 
 ### misc conventions and tips
-- **avoid performing manual memory management on smart pointers!** (kinda defeats the whole purpose lol)
-    - see Primer for details on misc functions for smart pointer usage, but prefer to stick with the ones mentioned here if possible.
+- **in general, don't worry about performing direct memory management (manual *delete*s) on smart pointers!**
+- see Primer for details on misc functions for smart pointer usage, but prefer to stick with the ones mentioned here if possible.
 
 
 ## direct memory management
@@ -117,8 +129,3 @@ auto p1 = new auto(obj);
         - use smart pointers!
     - if the raw pointer itself goes out of scope, there's no way to free the memory that it pointed to.
         - use smart pointers!
-- **avoid mixing smart pointers and regular pointers.**
-- 
-
-### misc conventions and tips
-- 
