--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -31,7 +31,7 @@ public:
 
 - the ***destructor*** frees the resources used by an object and destroys the nonstatic data members of the object.
 	- **the destructor runs its function body, then implicitly performs memberwise destruction** (calls destructors for class-type members, does nothing for built-in type members).
-		- note that the implicit destruction of a raw pointer does not *delete* the object to which that pointer points.
+		- note that the implicit destruction of a *raw* pointer does not delete the object to which that pointer points.
 	- if not manually defined, the destructor is **always** synthesized.
 		- the synthesized version is just a destructor with an empty body (memberwise destruction is always implicitly performed).
 ~~~
