copy elision and more

--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -95,8 +95,10 @@
 			- return an object from a function that has a nonreference return type (return by value).
 		- when we use copy initialization, we are asking the compiler to copy the right-hand operand into the object being created, converting that right-hand operand if necessary.
 			- for class-types, the conversion depends on the existence of a corresponding [implicit class-type conversion](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#additional-class-features).
-		- for class-types, the copying itself (after the conversion if there is one) is defined by the [copy constructor](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md#copy-assign-destroy-131) or move constructor.
-			- NOTE: i don't know if this is entirely correct, see [C++ Reference on copy initialization](https://en.cppreference.com/w/cpp/language/copy_initialization) and relevant link to *copy elision*? should probably just direct initialize and pass/return references where possible lol.
+		- for class-types, the copying itself (after the conversion if there is one) is defined by the [copy constructor](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md#copy-assign-destroy-131) or [move constructor]().
+			- note that during copy initialization, the compiler is permitted to (but does not always) perform an optimization that skips the copy/move constructor and uses direct initialization instead (see *[copy elision](https://stackoverflow.com/questions/12953127/what-are-copy-elision-and-return-value-optimization)* explanation).
+				- however, the copy constructor must exist and be accessible for this optimization to even have a chance at happening.
+				- Primer mentions possible case of this happening when there is an implicit class-type conversion for the initializer.
 - declaration vs definition
 	- **variables must be defined exactly once but can be declared multiple times.**
 	- *extern* keyword declares but does not define.
