--- a/cpp_notebook/primer/ch-12.md
+++ b/cpp_notebook/primer/ch-12.md
@@ -78,7 +78,7 @@ void do_something() {
                 - *u.release()* returns the raw pointer inside the unique_ptr u and makes u null ("releasing ownership" but not freeing any memory).
                 - *u.reset(p)* deletes the object to which unique_ptr u points and makes u point at the passed-in raw pointer p.
             - exception to this rule: we can copy or assign a unique_ptr that is about to be destroyed (i.e. returning a copy of a local unique_ptr).
-                - this is a special kind of copy, see [move semantics]{}
+                - this is a special kind of copy, see [move semantics]()?
 ~~~
 // legal (exception to the rule of no copy or assignment)
 unique_ptr<int> clone(int p) {
