--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -10,6 +10,7 @@
 	- when we use an object as an lvalue, we use the object's identity (its location in memory).
 	- **we can use an lvalue when an rvalue is required (the object's contents are used), but not the other way around.**
 		- one exception in 13.6
+	- [up-to-date technical reference here](https://en.cppreference.com/w/cpp/language/value_category)
 - precedence and associativity
 	- precedence dictates how operators are grouped and which groups have priority.
 	- associativity dictates how operands with the same precedence are evaluated. (for example, +/- goes left to right)
