--- a/cpp_notebook/primer/ch-07.md
+++ b/cpp_notebook/primer/ch-07.md
@@ -192,7 +192,7 @@ private:
 		- this implicit conversion means we can use an object of the type of the argument (std::string or std::vector) where an object of the class type A is actually expected.
 			- when that happens, the compiler automatically generates a *temporary* object of the class-type A to pass in as the std::string or std::vector.
 				- this could be a very hard bug to catch!
-	- **bottom line (at least for now as a beginner): do not allow implicit class-type conversions!!!**
+	- **bottom line (at least for now as a beginner): do not allow implicit class-type conversions!!** (except for [copy control](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md))
 		- **declare <ins>single-argument</ins> constructors with the prefix keyword *explicit* to suppress implicit conversions.**
 			- side-effects: explicit constructors can only be used with [direct initialization (not copy initialization with an = sign)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22), and the compiler will not use this constructor in an automatic conversion (users will have to [explicitly cast](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#type-conversions) it to convert it).
 - aggregate classes and literal classes
