--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -4,11 +4,11 @@
 
 ### main core ideas
 - a constructor is the ***copy constructor*** if its first parameter is a **reference to its class-type** and any additional parameters have default values.
-	- usually the parameter is reference to const.
+	- the parameter is usually a reference to const.
 	- usually not *explicit* (copy constructor is often used implicitly).
 	- if not manually defined, the copy constructor is **always** synthesized! (as opposed to [synthesized default constructors](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-07.md#constructors))
 		- the synthesized copy constructor performs (nonstatic) memberwise copying (using each member's respective copy constructor).
-	- copy constructors are also used in [copy initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22).
+	- copy constructors are used in [copy initialization](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) (and direct initialization?).
 ~~~
 // example copy constructor declaration
 class Foo {
