--- a/cpp_notebook/primer/ch-04.md
+++ b/cpp_notebook/primer/ch-04.md
@@ -8,8 +8,9 @@
 - **lvalues vs rvalues**
 	- roughly speaking, when we use an object as an rvalue, we use the object's value (its contents).
 	- when we use an object as an lvalue, we use the object's identity (its location in memory).
-	- **we can use an lvalue when an rvalue is required (the object's contents are used), but not the other way around.**
-		- one exception in 13.6
+	- **we can generally use an lvalue when an rvalue is required (the object's contents are used), but not the other way around.**
+		- exception: [rvalue references]()
+	- [easier to understand explanation here](https://stackoverflow.com/questions/3601602/what-are-rvalues-lvalues-xvalues-glvalues-and-prvalues)
 	- [up-to-date technical reference here](https://en.cppreference.com/w/cpp/language/value_category)
 - precedence and associativity
 	- precedence dictates how operators are grouped and which groups have priority.
