--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -18,6 +18,7 @@ class Foo {
 
 - the ***copy-assignment operator*** is a function overload of the = operator.
 	- for consistency purposes, assignment operators ordinarily should return a reference to their left-hand operand (return *\*this*).
+	- needs to take into account self-assignment.
 	- if not manually defined, the copy-assignment operator is **always** synthesized.
 		- the synthesized version performs (nonstatic) memberwise assignment (using each member's respective copy-assignment operator).
 		- also returns a reference to its left-hand operand.
@@ -60,7 +61,6 @@ public:
 
 ### misc stuff in Primer
 - *value-like* vs *pointer-like* classes.
-	- see Primer for details.
 - *swap* function and *copy-and-swap* technique for classes that allocate dynamic memory.
 
 ### misc conventions and tips
@@ -78,11 +78,13 @@ work should be put in private utility functions.
 	- when an object would be immediately destroyed after it is copied, moving would alternatively provide better performance.
 		- i.e. [moving a shared_ptr for optimization](https://stackoverflow.com/questions/41871115/why-would-i-stdmove-an-stdshared-ptr)
 	- classes (like *unique_ptr*) that exhibit "ownership" and don't share their resource need to be moved instead of copied.
+		- move semantics in general are closely tied to the concept of ownership.
 - ***rvalue references***
 	- obtained by using && instead of & (for [lvalue reference](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23)) as the type.
 		- ***std::move*** function returns an rvalue reference to its given (lvalue) object.
 			- tells the compiler that we have an lvalue that we want to treat as if it were an rvalue.
 			- **std::move essentially promises the compiler that we do not intend to use the moved-from object (lvalue) again in any way except to assign to it or to destroy it.**
+				- **this is a dangerous operation, so use it judiciously!**
 	- rvalue references may be bound only to an object that is about to be destroyed (literals, the results of certain expressions, anything that is not an lvalue).
 		- this is the opposite of binding rules for normal lvalue references and more like the binding rules for lvalue references to const.
 		- note that **all** variables are lvalues, even variables that have rvalue reference type.
@@ -96,15 +98,34 @@ int &&rr2 = i * 42;
 int &&rr3 = std::move(rr1);
 ~~~
 - to enable move operations for our own types, we define the move copy-control members: **move constructor** and **move-assignment operator**. 
-	- these members are similar to the corresponding copy operations, but they “steal” resources from their given object rather than copy them.
+	- these members are similar to the corresponding copy operations (see above), but they “steal” resources from their given object rather than copy them.
 	- move copy-control members that are not expected to throw exceptions should be marked as ***noexcept*** (after the parameter list).
-	- **after a move operation, the “moved-from” object must remain a *valid*, *destructible* object, but users may make no assumptions about its value (and shouldn't use it any way other than to assign to it or destroy it).**
-		- **move copy-control members must ensure that the moved-from object is left in a state such that destroying that object will be harmless.**
+	- **after a move operation, the “moved-from” object must remain a *valid* (including assignable) and *destructible* object. users may make no assumptions about its value (and shouldn't use it any way other than to assign to it or destroy it).**
+		- move copy-control members must ensure that the moved-from object is left in a state such that destroying that object will be harmless.
 			- i.e. setting the moved-from object's raw pointers to nullptr, so destroying the moved-from object won't also destroy the resources that it just handed over to the moved-to object.
+	- with move copy-control, rvalues are moved and lvalues are copied.
+		- if a class has a usable copy constructor and no move constructor, objects that you try to "move" will use the copy constructor instead. (similarly for the copy-assignment operator and move-assignment)
+	- the compiler will synthesize a move constructor or a move-assignment operator only if the class doesn’t define any of its own copy-control members AND if every nonstatic data member of the class can be moved (built-in types or move-operation-enabled class types).
+		- classes that define a move constructor or move-assignment operator must also define their own copy operations.
+		- remember the rule of three/five/zero!s
+~~~
+class Foo {
+	// example move copy constructor declaration
+	Foo(Foo&& foo) noexcept;
+	
+	// example move copy-assignment declaration
+	Foo& operator=(Foo&& rhs) noexcept;
+};
+~~~
 
 ### misc conventions and tips
+- Because a moved-from object has indeterminate state, calling std::move on an object is a dangerous operation. When we call move, we must be absolutely certain that there can be no other users of the moved-from object.
+	- Judiciously used inside class code, move can offer significant performance benefits. Casually used in ordinary user code (as opposed to class implementation code), moving an object is more likely to lead to mysterious and hard-to-find bugs than to any improvement in the performance of the application.
+	- Outside of class implementation code such as move constructors or move-assignment operators, use std::move only when you are certain that you need to do a move and that the move is guaranteed to be safe.
+- again, [**rule of three/five/zero**](https://en.cppreference.com/w/cpp/language/rule_of_three) to determine when classes need to define their own (non-synthesized) versions of copy-control members
 - [different value category terminology (lvalue, rvalue, xvalue, etc.)](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#chapter-4-expressions)
 - when to use move operations
-	- [pass-by-value-and-std::move vs pass-by-reference for constructors](https://stackoverflow.com/questions/51705967/advantages-of-pass-by-value-and-stdmove-over-pass-by-reference)
 	- [see second answer here](https://stackoverflow.com/questions/3413470/what-is-stdmove-and-when-should-it-be-used)
+	- [pass-by-value-and-std::move vs pass-by-reference for constructors](https://stackoverflow.com/questions/51705967/advantages-of-pass-by-value-and-stdmove-over-pass-by-reference)
+	- [move semantics vs smart pointers](https://stackoverflow.com/questions/44275222/compare-the-habits-between-move-and-smart-pointer-in-c)
 - [some other considerations for when to define move constructors and assignments for our own types (read all answers!)](https://stackoverflow.com/questions/11077103/when-to-use-move-constructors-assignments)
