down the rabbit hole of value types

--- a/cpp_notebook/primer/ch-13.md
+++ b/cpp_notebook/primer/ch-13.md
@@ -85,8 +85,8 @@ work should be put in private utility functions.
 			- tells the compiler that we have an lvalue that we want to treat as if it were an rvalue.
 			- **std::move essentially promises the compiler that we do not intend to use the moved-from object (lvalue) again in any way except to assign to it or to destroy it.**
 				- **this is a dangerous operation, so use it judiciously!**
-	- rvalue references may be bound only to an object that is about to be destroyed (literals, the results of certain expressions, anything that is not an lvalue).
-		- this is the opposite of binding rules for normal lvalue references and more like the binding rules for lvalue references to const.
+	- rvalue references may be bound only to an object that is about to be destroyed (literals, the results of certain expressions, anything that is not an [lvalue](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#chapter-4-expressions)).
+		- this is the opposite of the binding rules for [plain lvalue references](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#compound-types-23) and more like the binding rules for [lvalue references to const](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#const-qualifier-24).
 		- note that **all** variables are lvalues, even variables that have rvalue reference type.
 	- because rvalue references can only be bound to temporaries, we know that the referred-to object is about to be destroyed and there can be no other users of that object.
 		- as a result, we are free to “move” resources from an rvalue reference to another object.
