--- a/cpp_notebook/primer/ch-02.md
+++ b/cpp_notebook/primer/ch-02.md
@@ -139,6 +139,7 @@ int i = 1024, *p = &i, &r = i;
 		- references must be initialized.
 	- *all* operations on a reference are actually operations on the object to which the reference is bound.
 	- references are not objects themselves.
+	- see next section for reference to const, and see [here](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-13.md#move-semantics-136) for a completely different type of reference called an rvalue reference.
 - a **pointer** (signified by a *declarator* with the * type modifier) points to another type.
 	- a pointer is an object in its own right, unlike a reference.
 	- a pointer holds the address of another object.
@@ -216,7 +217,9 @@ const int &r1 = i; // reference to object of type const int
 	- const objects require the use of references to const, but references to const are not limited to use with const objects.
 - we can bind a *reference to const* to any expression that can be *converted* to the type of the reference, including:
 	- a **nonconst** object, a literal, or a more general expression.
-	- behind the scenes: unnamed **temporary objects** are created by compiler to store results from evaluating expressions / conversions.
+		- behind the scenes: unnamed **temporary objects** are created by compiler to store results from evaluating expressions / conversions.
+		- **this means references to const can be bound to a temporary ([rvalue](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-04.md#chapter-4-expressions)), in which case [the temporary's lifetime is prolonged.](https://herbsutter.com/2008/01/01/gotw-88-a-candidate-for-the-most-important-const/)**
+			- note this doesn't work for plain references (would result in a compiler error or worse, a dangling reference).
 
 ~~~
 double dval = 3.14;
