--- a/cpp_notebook/primer/ch-06.md
+++ b/cpp_notebook/primer/ch-06.md
@@ -102,6 +102,7 @@ int main() {
 - empty returns can be used in void functions to exit the function at an intermediate point.
 - non-void functions must return a value that is implicitly convertible to the function return type.
 - in return by value, the return value is used to [copy](https://github.com/tedklin/pseudoblog/blob/master/cpp_notebook/primer/ch-02.md#variables-22) initialize a temporary variable (of the function return type) at the call site, and that temporary is the result of the function call.
+	- see [**return value optimization** (a form of copy elision)](https://stackoverflow.com/questions/12953127/what-are-copy-elision-and-return-value-optimization)
 - functions can also return by reference.
 	- **never return a reference (or pointer) to a local object.**
 	- **never directly return a literal when the function has a return type of a reference.**
