emphasize lifetime of objects created with new

--- a/cpp_notebook/primer/ch-12.md
+++ b/cpp_notebook/primer/ch-12.md
@@ -124,8 +124,6 @@ auto p1 = new auto(obj);
     - **deleting a pointer to memory that was not allocated on the heap by *new*, or deleting the same pointer value more than once, or trying to use a dangling pointer in any way is undefined and can corrupt the heap!!!**
         - use smart pointers instead of raw pointers to avoid thinking about when and how to delete things!
         - for limited protection when you *need* to use raw pointers, you should generally free memory only right before the raw pointer goes out of scope or set the raw pointer to null_ptr after deleting its object.
-- a dynamic object managed through a raw pointer exists until it is explicitly deleted.
+- **a dynamic object managed through a raw pointer exists until it is explicitly deleted.**
     - **functions that return raw pointers put the burden on callers to delete the memory.**
-        - use smart pointers!
     - if the raw pointer itself goes out of scope, there's no way to free the memory that it pointed to.
-        - use smart pointers!
