better descrip of memory

--- a/cpp_notebook/primer/ch-12.md
+++ b/cpp_notebook/primer/ch-12.md
@@ -2,13 +2,11 @@
 
 ## overview
 
-Dynamic memory is memory maintained on the *heap* or *free store* at runtime.
+*Dynamic* memory is memory maintained on the *heap* or *free store* at runtime. **The program controls the lifetime of dynamic objects; our code must destroy such objects when they are no longer needed.** In contrast, objects in *static* memory exist until the program ends, and objects in *stack* memory exist until they go out of scope / the block in which they are defined is done executing.
 
-In C++, dynamic memory is managed through a pair of operators: *new*, which
-allocates, and optionally initializes, an object in dynamic memory and returns a pointer to that object; and *delete*, which takes a pointer to a dynamic object, destroys that object, and frees the associated memory. Dynamic memory is problematic because it is surprisingly hard to ensure that we free memory at the right time. Either we forget to free the memory—in which case we have a memory leak—or we free the memory when there are still pointers referring to that memory—in which case we have a *dangling* pointer that refers to memory that is no longer valid. 
+In C++, dynamic memory is managed through a pair of operators: *new*, which allocates, and optionally initializes, an object in dynamic memory and returns a pointer to that object; and *delete*, which takes a pointer to a dynamic object, destroys that object, and frees the associated memory. Dynamic memory is problematic because it is surprisingly hard to ensure that we free memory at the right time. Either we forget to free the memory—in which case we have a memory leak—or we free the memory when there are still pointers referring to that memory—in which case we have a *dangling* pointer that refers to memory that is no longer valid. 
 
-To make using dynamic memory easier (and safer), the new library provides two smart pointer types that manage dynamic objects. A smart pointer acts like a regular pointer with the important exception that it automatically deletes the object to which it points. The new library defines two kinds of smart pointers that differ in how they manage their underlying pointers: *shared_ptr*, which allows multiple pointers to refer to the same object, and *unique_ptr*, which “owns” the object to which it points. The library also defines a companion class named *weak_ptr* that is a weak reference to an object managed by a *shared_ptr*. All
-three are defined in the *memory* header.
+To make using dynamic memory easier (and safer), the new library provides two smart pointer types that manage dynamic objects. A smart pointer acts like a regular pointer with the important exception that it automatically deletes the object to which it points. The new library defines two kinds of smart pointers that differ in how they manage their underlying pointers: *shared_ptr*, which allows multiple pointers to refer to the same object, and *unique_ptr*, which “owns” the object to which it points. The library also defines a companion class named *weak_ptr* that is a weak reference to an object managed by a *shared_ptr*. All three are defined in the *memory* header.
 
 ## smart pointers
 
@@ -124,6 +122,6 @@ auto p1 = new auto(obj);
     - **deleting a pointer to memory that was not allocated on the heap by *new*, or deleting the same pointer value more than once, or trying to use a dangling pointer in any way is undefined and can corrupt the heap!!!**
         - use smart pointers instead of raw pointers to avoid thinking about when and how to delete things!
         - for limited protection when you *need* to use raw pointers, you should generally free memory only right before the raw pointer goes out of scope or set the raw pointer to null_ptr after deleting its object.
-- **a dynamic object managed through a raw pointer exists until it is explicitly deleted.**
+- a dynamic object managed through a raw pointer exists until it is explicitly deleted.
     - **functions that return raw pointers put the burden on callers to delete the memory.**
     - if the raw pointer itself goes out of scope, there's no way to free the memory that it pointed to.
